[package]
name = "lua-dream"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
lua-dream-lexer = { path = "crates/lua-dream-lexer" }
lua-dream-parser = { path = "crates/lua-dream-parser" }
thiserror = "2.0.18"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
lua-dream-lexer = { workspace = true }
lua-dream-parser = { workspace = true }
